@@ -51,10 +51,10 @@
 #endif
 
 #include <Rembedded.h>
-#ifndef WIN32
-  #define R_INTERFACE_PTRS
-  #include <Rinterface.h>
-#endif
+// #ifndef WIN32
+//   #define R_INTERFACE_PTRS
+//   #include <Rinterface.h>
+// #endif
 #include <R_ext/RStartup.h>
 
 #include <MemBuf.h>
